docs: generate docs for specific URL generation
